# cheeky-telegram-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  context.py  main.py
app/ai/: __init__.py  client.py  memory.py  moderation.py  prompts.py
app/bot/filters/: __init__.py  admin.py
app/bot/handlers/: __init__.py  admin.py  chat.py  common.py  games.py  media.py  schedule.py  voice.py
app/bot/keyboards/: __init__.py  inline.py
app/bot/middlewares/: __init__.py  context.py  throttling.py
app/bot/states/: admin.py
app/config/: settings.py
app/database/: __init__.py  base.py  session.py
app/database/models/: __init__.py  entities.py
app/database/repositories/: __init__.py  core.py
app/services/: __init__.py  ai_chat.py  cache.py  games.py  media.py  reactions.py  scheduler.py  tts.py
app/texts/: ru.py
app/utils/: html.py  logging.py
media/: README.md
scripts/: check.sh  entrypoint.sh
tests/: conftest.py  test_admin.py  test_cache.py  test_games.py  test_media.py  test_moderation.py  test_prompts.py  test_repositories.py  test_scheduler.py  test_settings.py
