[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cheeky-telegram-bot"
version = "1.0.0"
description = "Дерзкий безопасный ИИ-помощник для взрослого Telegram-сообщества"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.21,<4",
  "aiohttp>=3.10,<4",
  "aiosqlite>=0.20,<1",
  "alembic>=1.14,<2",
  "apscheduler>=3.11,<4",
  "asyncpg>=0.30,<1",
  "edge-tts>=7.0,<8",
  "ffmpeg-python>=0.2,<1",
  "httpx>=0.28,<1",
  "openai>=1.90,<2",
  "pydantic-settings>=2.8,<3",
  "redis>=5.2,<7",
  "sqlalchemy[asyncio]>=2.0.38,<3",
  "structlog>=25.1,<26",
  "tenacity>=9.0,<10",
  "tzdata>=2025.1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6.0,<7",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic"]

[[tool.mypy.overrides]]
module = ["edge_tts.*", "apscheduler.*", "ffmpeg.*"]
ignore_missing_imports = true

